--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="En">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
     <link
@@ -15,23 +15,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" /> -->
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <a href="" class="logo">
-        <img src="./images/header-logo.svg" alt="" />
-      </a>
+    <header class="">
+      <div class="flex justify-center">
+        <h1 class="text-3xl font-bold underline">Hello world!</h1>
+        <a href="" class="logo">
+          <img src="./images/header-logo.svg" alt="" />
+        </a>
 
-      <nav class="header-nav">
-        <ul class="header-list">
-          <li class="header-item">Features</li>
-          <li class="header-item">Pricing</li>
-          <li class="header-item">Testimonials</li>
-          <li class="header-item">Instructions</li>
-        </ul>
-        <button class="btn" type="button">Get template</button>
-      </nav>
+        <nav class="header-nav">
+          <ul class="header-list">
+            <li class="header-item">Features</li>
+            <li class="header-item">Pricing</li>
+            <li class="header-item">Testimonials</li>
+            <li class="header-item">Instructions</li>
+          </ul>
+          <button class="btn" type="button">Get template</button>
+        </nav>
+      </div>
     </header>
 
     <main>
