--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/style.css" /> -->
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body class="bg-white">
     <header class="shadow-l">
@@ -115,7 +115,7 @@
           </li>
           <li class="features-list-item">
             <img src="" alt="" />
-            <h3>Lists</h3>
+            <h3 class="text-red-600">Lists</h3>
             <p>
               Dolor sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci
               tincidunt.
